creating nav bar and header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
     <script src="js/site.js" async></script>
   </head>
   <body>
-    <h1> Welcome to the Reptile Motel! </h1>
+    <div class="header">
+      <img src="images/logo.png" alt="logo" class="header">
+      <h1> THE   REPTILE    MOTEL </h1>
+    </div>
+    <nav class="navbar">
+      <div id="navlinks" class="navLinks">
+        <a href="index.html">Home</a>
+        <a href="pricing.html">Pricing</a>
+        <a href="bookings.html">Bookings</a>
+        <a href="faqs.html">FAQs</a>
+        <a href="aboutme.html">About Me</a>
+      </div>
+    <!--<h1> Welcome to the Reptile Motel! </h1>
     <h2> Here for your reptile sitting needs </h2>
-    <p> 
+    <p> Are you going away? Need someone to look over your scaly friends? Look no further than here! I offer in-house and onboarding services for the general Broward area. </p>-->
   </body>
 </html>
