--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         <a href="faqs.html">FAQs</a>
         <a href="aboutme.html">About Me</a>
       </div>
-    <!--<h1> Welcome to the Reptile Motel! </h1>
-    <h2> Here for your reptile sitting needs </h2>
-    <p> Are you going away? Need someone to look over your scaly friends? Look no further than here! I offer in-house and onboarding services for the general Broward area. </p>-->
+    </nav>
+    <div class="home-content">
+      <h1> Welcome to the Reptile Motel! </h1>
+      <h2> Here for your reptile sitting needs </h2>
+      <p> Are you going away? Need someone to look over your scaly friends? Look no further than here! I offer in-house and onboarding services for the general Broward area. </p>
+    </div>
   </body>
 </html>
