creating home page layout

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
   <head>
-    <title>Style Agent Service</title>
+    <title>The Reptile Motel</title>
     <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
     <link rel="stylesheet" media="screen" href="css/meyers_and_normalize-form_reset.css" >
@@ -22,10 +22,15 @@
         <a href="aboutme.html">About Me</a>
       </div>
     </nav>
+    <h1> Welcome to the Reptile Motel! </h1>
     <div class="home-content">
-      <h1> Welcome to the Reptile Motel! </h1>
-      <h2> Here for your reptile sitting needs </h2>
-      <p> Are you going away? Need someone to look over your scaly friends? Look no further than here! I offer in-house and onboarding services for the general Broward area. </p>
+      <div class="home-text">
+        <h2> Here for your reptile sitting needs! </h2>
+        <p> Are you going away? Need someone to look over your scaly friends? Look no further than here! I offer in-house and onboarding services for the general Broward area. </p>
+      </div>
+      <div class="home-image">
+        <img src="images/matis-croc.jpeg" alt="Mateo holding a baby crocodile">
+      </div>
     </div>
   </body>
 </html>
