updated layout, replaced picture

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p> Are you going away? Need someone to look over your scaly friends? Look no further than here! I offer in-house and onboarding services for the general Broward area. </p>
       </div>
       <div class="home-image">
-        <img src="images/matis-croc.jpeg" alt="Mateo holding a baby crocodile">
+        <img src="images/zilla.jpg" alt="Zilla in a log">
       </div>
     </div>
   </body>
